# descomplica_ementas

./: .gitignore  README.md  auth.py  config.json  extraction.py  pyproject.toml  shell.nix  tests.ipynb
